Started message list.

--- a/src/main/webapp/templates.html
+++ b/src/main/webapp/templates.html
@@ -3,7 +3,7 @@
 <div>
     <label>Enter your name:</label>
     <form>
-	    <input type="text" id="name" />
+	    <input type="text" id="name" value="Cole" />
 	    <input type="submit" id="ok" value="Start" />
     </form>
 </div>
@@ -26,6 +26,13 @@
 		    <input type="button" id="send" value="Send Message" />
 	    </div>
     </form>
+</div>
+
+</script>
+
+<script type="text/template" id="list_template">
+
+<div>List goes here...
 </div>
 
 </script>
