--- a/src/main/webapp/templates.html
+++ b/src/main/webapp/templates.html
@@ -15,7 +15,7 @@
 <div>
 	<form>
 		<div>
-			<label>Enter your name:</label>
+			<label>Current topic:</label>
 		    <select id="topics">
 		    	<option><i>Topics are loading...</i></option>
 		    </select>
