--- a/src/main/webapp/templates.html
+++ b/src/main/webapp/templates.html
@@ -17,7 +17,12 @@
 		<div>
 			<label>Current topic:</label>
 		    <select id="topics">
-		    	<option><i>Topics are loading...</i></option>
+		    	<option>Sports</option>
+		    	<option>Hobbies</option>
+		    	<option>Books</option>
+		    	<option>Movies</option>
+		    	<option>Travel</option>
+		    	<option>Food</option>
 		    </select>
 		</div>
 		<div>
